# breathe-fw

./: .gitmodules  CMakeLists.txt  partitions.csv  readme.md
components/dht-manager/: CMakeLists.txt  dht-manager.c
components/dht-manager/include/: dht-manager.h
components/gpio-manager/: CMakeLists.txt  gpio-manager.c
components/gpio-manager/include/: gpio-manager.h
components/mqtt-manager/: CMakeLists.txt  mqtt-manager.c
components/mqtt-manager/include/: mqtt-events.h  mqtt-manager.h
components/ota-manager/: CMakeLists.txt  ota-manager.c
components/ota-manager/include/: ota-manager.h
components/storage-manager/: CMakeLists.txt  storage-manager.c
components/storage-manager/include/: storage-manager.h
components/wifi-manager/: CMakeLists.txt  time-manager.c  wifi-manager.c  wifi-provisioning.c
components/wifi-manager/include/: time-manager.h  wifi-events.h  wifi-manager.h  wifi-provisioning-events.h  wifi-provisioning.h
device_config/: config.json
main/: CMakeLists.txt  Kconfig.projbuild  data-sender.c  device-helper.c  main.c
main/include/: app-models.h  data-sender.h  device-helper.h  pmsx-config.h
